@@ -1,6 +1,7 @@
-20160922		6.0.??
+20161006		6.0.12
 	- Fixed SCSI timing issue
 	- Added glitch filter on SCSI signals.
+	- Re-implemented SCSI parity checking.
 
 20160912		6.0.10
 	- Fixed write issue with UHS-I Speed Class 3 SD cards.
